# qt-ac-framework

./: CMakeLists.txt  DiskAnalyzer.cpp  Main.qml  NetworkCircle.qml  PROJECT_STATUS.md  README.md  RemoteMonitor.qml  STRUCTURE.md  ServerManager.cpp  ServerManager.h  Sidebar.qml  SparkLine.qml  StatCircle.qml  SystemMonitor.cpp  SystemMonitor.h  main.cpp
include/: DiskAnalyzer.h  SystemMonitor.h
src/ui/components/: StatCircle.qml
src/ui/views/: DiskCleanup.qml  RemoteMonitor.qml
